# pelvis-therapy-smart-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pylint.yml
app/agents/: info_agent.py  router.py
app/agents/appointments_agent/: agent.py
app/agents/info_agent/: agent.py
app/config/: settings.py
app/data/: faq_portafolio.yaml
app/runtime/: appointments_manager.py  handler_lambda.py  meta_webhook_handler.py  reminder_dispatcher.py  reminder_scheduler.py  wa_events_handler.py
app/tools/: gcal_client.py  google_calendar_tool.py  messaging_tool.py  notify_owner_tool.py  scheduler_tool.py  state_store.py  whatsapp_owner.py
content/pelvis/: service.yml
docs/: architecture.md  runbook.md
infra/terraform/envs/dev/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/envs/prod/: backend.tf
infra/terraform/modules/api_gateway/: README.md
infra/terraform/modules/api_http/: main.tf
infra/terraform/modules/bedrock_agentcore/: README.md
infra/terraform/modules/dynamodb/: README.md
layers/agents/: requirements.txt
layers/google/: requirements.txt
layers/google/python/: google_auth_httplib2.py
ops/: alarms.md  runbooks.md
scripts/: bootstrap.sh  bootstrap_scaffold.sh
src/orchestration/: reminders_sfn.asl.json
tests/: conftest.py  test_appointments_agent.py  test_google_calendar_tool.py  test_messaging_tool.py  test_meta_webhook_handler.py  test_notify_owner_tool.py  test_scheduler_tool.py  test_state_store.py
(+278 files in other folders)
